# learning-gfx-hal

./: Cargo.toml  README.md
src/: main.rs
src/shaders/: part-1.frag  part-1.vert  part-2.frag  part-2.vert  part-3.frag  part-3.vert
